--- a/waiter/index.html
+++ b/waiter/index.html
@@ -188,8 +188,98 @@
             </div>
 
             <!-- Recent Orders -->
-            <div class="orders-section">
+            <div class="orders-section" id="dashboardOrdersSection">
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                    <h5 class="mb-0">
+                        <i class="fas fa-clipboard-list me-2"></i>
+                        Đơn hàng gần đây
+                    </h5>
+                    <div class="d-flex gap-2">
+                        <button class="btn btn-sm btn-outline-primary" onclick="refreshDashboardOrders()">
+                            <i class="fas fa-sync-alt me-1"></i>
+                            Làm mới
+                        </button>
+                        <button class="btn btn-sm btn-primary" onclick="showOrders()">
+                            <i class="fas fa-eye me-1"></i>
+                            Xem tất cả
+                        </button>
+                    </div>
+                </div>
 
+                <!-- Quick Stats -->
+                <div class="row mb-3">
+                    <div class="col-3">
+                        <div class="stat-card pending">
+                            <div class="stat-icon">
+                                <i class="fas fa-clock"></i>
+                            </div>
+                            <div class="stat-info">
+                                <div class="stat-number" id="pendingOrdersCount">-</div>
+                                <div class="stat-label">Chờ xử lý</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="stat-card confirmed">
+                            <div class="stat-icon">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                            <div class="stat-info">
+                                <div class="stat-number" id="confirmedOrdersCount">-</div>
+                                <div class="stat-label">Đã xác nhận</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="stat-card ready">
+                            <div class="stat-icon">
+                                <i class="fas fa-bell"></i>
+                            </div>
+                            <div class="stat-info">
+                                <div class="stat-number" id="readyOrdersCount">-</div>
+                                <div class="stat-label">Sẵn sàng</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="stat-card completed">
+                            <div class="stat-icon">
+                                <i class="fas fa-check-double"></i>
+                            </div>
+                            <div class="stat-info">
+                                <div class="stat-number" id="completedOrdersCount">-</div>
+                                <div class="stat-label">Hoàn thành</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Orders List -->
+                <div class="dashboard-orders-list" id="dashboardOrdersList">
+                    <!-- Loading state -->
+                    <div class="dashboard-orders-loading" id="dashboardOrdersLoading">
+                        <div class="d-flex justify-content-center align-items-center py-4">
+                            <div class="spinner-border spinner-border-sm me-2" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
+                            <span>Đang tải đơn hàng...</span>
+                        </div>
+                    </div>
+
+                    <!-- Orders will be rendered here -->
+                    <div class="dashboard-orders-content" id="dashboardOrdersContent" style="display: none;">
+                        <!-- Orders list will be populated by JavaScript -->
+                    </div>
+
+                    <!-- Empty state -->
+                    <div class="dashboard-orders-empty" id="dashboardOrdersEmpty" style="display: none;">
+                        <div class="text-center py-4">
+                            <i class="fas fa-clipboard-list fa-3x text-muted mb-3"></i>
+                            <h6 class="text-muted">Chưa có đơn hàng nào</h6>
+                            <p class="text-muted small">Đơn hàng mới sẽ hiển thị ở đây</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -248,6 +338,9 @@
             updateNotificationCount();
             loadUserInfo();
             loadWorkSchedule();
+            if (document.getElementById('dashboardOrdersSection')) {
+                initDashboardOrders();
+            }
         });
 
 
@@ -1082,6 +1175,165 @@
             }
         }
 
+        function updateDashboardStats() {
+            if (hasWorkSchedule) {
+                loadActiveOrdersCount();
+                loadTablesCount();
+                loadShiftRevenue(); // Thêm dòng này
+            }
+        }
+
+        function initDashboardOrders() {
+            loadDashboardOrders();
+        }
+
+
+        // Load orders for dashboard (recent orders only)
+        async function loadDashboardOrders() {
+            try {
+                showDashboardLoading();
+
+                // Build query parameters for recent orders
+                const params = new URLSearchParams();
+                params.append('page', '0');
+                params.append('size', '10'); // Only show 10 recent orders
+                params.append('orderBy', 'createdAt');
+                params.append('sort', 'DESC');
+
+                // Add area and startTime from currentWorkSchedule
+                if (currentWorkSchedule && currentWorkSchedule.area) {
+                    params.append('area', currentWorkSchedule.area);
+                }
+                if (currentWorkSchedule && currentWorkSchedule.startTime) {
+                    params.append('startTime', currentWorkSchedule.startTime);
+                }
+
+                // Fetch orders
+                const data = await apiFetch(`/orders/waiter/work-shift-orders?${params.toString()}`, {
+                    method: 'GET'
+                });
+
+                const orderPage = data.result;
+                const orders = orderPage.content || [];
+
+                // Update dashboard with orders
+                renderDashboardOrders(orders);
+                updateDashboardStats(orders);
+
+            } catch (error) {
+                console.error('Error loading dashboard orders:', error);
+                showDashboardError(error.message);
+            }
+        }
+
+        // Render orders in dashboard
+        function renderDashboardOrders(orders) {
+            const loadingElement = document.getElementById('dashboardOrdersLoading');
+            const contentElement = document.getElementById('dashboardOrdersContent');
+            const emptyElement = document.getElementById('dashboardOrdersEmpty');
+
+            // Hide loading
+            if (loadingElement) {
+                loadingElement.style.display = 'none';
+            }
+
+            if (orders.length === 0) {
+                // Show empty state
+                if (contentElement) {
+                    contentElement.style.display = 'none';
+                }
+                if (emptyElement) {
+                    emptyElement.style.display = 'block';
+                }
+                return;
+            }
+
+            // Show content
+            if (emptyElement) {
+                emptyElement.style.display = 'none';
+            }
+            if (contentElement) {
+                contentElement.style.display = 'block';
+
+                // Render orders
+                contentElement.innerHTML = orders.map(order => `
+            <div class="dashboard-order-item ${order.status.toLowerCase()}" 
+                 onclick="viewOrderDetails(${order.id})">
+                <div class="order-header">
+                    <span class="order-id">#${order.id}</span>
+                    <span class="order-time">
+                        <i class="fas fa-clock me-1"></i>
+                        ${formatDateTime(order.createdAt)}
+                    </span>
+                </div>
+                <div class="order-info">
+                    <div class="order-details">
+                        <span class="order-table">
+                            <i class="fas fa-chair me-1"></i>
+                            ${order.tableNumber ? `Bàn ${order.tableNumber}` : 'Mang về'}
+                        </span>
+                        <span class="order-amount">
+                            <i class="fas fa-money-bill me-1"></i>
+                            ${formatCurrency(order.totalAmount)}
+                        </span>
+                    </div>
+                    <span class="order-status-mini ${order.status.toLowerCase()}">
+                        ${getStatusText(order.status)}
+                    </span>
+                </div>
+            </div>
+        `).join('');
+            }
+        }
+
+        function showDashboardLoading() {
+            const loadingElement = document.getElementById('dashboardOrdersLoading');
+            const contentElement = document.getElementById('dashboardOrdersContent');
+            const emptyElement = document.getElementById('dashboardOrdersEmpty');
+
+            if (loadingElement) {
+                loadingElement.style.display = 'block';
+            }
+            if (contentElement) {
+                contentElement.style.display = 'none';
+            }
+            if (emptyElement) {
+                emptyElement.style.display = 'none';
+            }
+        }
+
+        // Show error state
+        function showDashboardError(message) {
+            const loadingElement = document.getElementById('dashboardOrdersLoading');
+            const contentElement = document.getElementById('dashboardOrdersContent');
+            const emptyElement = document.getElementById('dashboardOrdersEmpty');
+
+            if (loadingElement) {
+                loadingElement.style.display = 'none';
+            }
+            if (contentElement) {
+                contentElement.style.display = 'none';
+            }
+            if (emptyElement) {
+                emptyElement.innerHTML = `
+            <div class="text-center py-4">
+                <i class="fas fa-exclamation-triangle fa-3x text-danger mb-3"></i>
+                <h6 class="text-danger">Lỗi tải đơn hàng</h6>
+                <p class="text-muted small">${message}</p>
+                <button class="btn btn-sm btn-outline-primary" onclick="refreshDashboardOrders()">
+                    <i class="fas fa-sync-alt me-1"></i>
+                    Thử lại
+                </button>
+            </div>
+        `;
+                emptyElement.style.display = 'block';
+            }
+        }
+
+        // Refresh dashboard orders manually
+        function refreshDashboardOrders() {
+            loadDashboardOrders();
+        }
         window.addEventListener('beforeunload', function () {
             disconnectWebSocket();
 
