--- a/waiter/order.html
+++ b/waiter/order.html
@@ -86,7 +86,7 @@
                     <i class="fas fa-plus me-1"></i>
                     Nhận đơn mới
                   </button>
-                  <button class="btn btn-outline-info" onclick="refreshOrders()">
+                  <button class="btn btn-outline-success" onclick="refreshOrders()">
                     <i class="fas fa-sync-alt me-1"></i>
                     Làm mới
                   </button>
